--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                   <div class="item">
                     [09] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Behavioral profiles of different types os social status in preschool children: an observational approach".
                      </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (2007), Volume 35(2), 195-212.
-                    <p>With F. Braza, P. Braza, M. R. Carreras, J. R. Sánchez-Martín, A. Azurmendi, A. Sorozábal, A. García and J. Cardas. </p></span>   </div><!--//item--><br/> <br/>
-                </div><!--//item-->
+                    <p>With F. Braza, P. Braza, M. R. Carreras, J. R. Sánchez-Martín, A. Azurmendi, A. Sorozábal, A. García and J. Cardas. </p></span>
+                    </div><!--//item-->
                   <div class="item">
                     [08] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggression, dominance, and affiliation: Their relationships with androgen levels and intelligence in 5-year-old children".
                      </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2006), Volume 50(1), 132-140.
