--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     
     
     <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-pencil"></i>Publications</h2>
+                <h2 class="section-title"><i class="fa fa-pencil"></i>Projects</h2>
                 <div class="intro">
                     <p></p>
                 </div><!--//intro-->
