--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                      </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (1993), Volume 21(2), 145-157.
                 <p>With P. Braza, F. Braza and M. R. Carreras. </p></span>
               </div>
+    </section><!--//section-->
         
     
     <section class="section projects-section">
