--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                     <p></p>
                 </div><!--//intro-->
                 <div class="item">
-                    [01] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Measuring the social ability of preschool children".
-                     </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (1993), Volume 21(2), 145-157.
-                <p>With P. Braza, F. Braza and M. R. Carreras. </p></span>
+                    [01] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Modelo biopsicosocial del comportamiento agresivo en niños y niñas en edad escolar: Susceptibilidad al contexto familiar en funcion del temperamento y los perfiles hormonales / Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
+                     </a></span> <span class="project-tagline"> <br/> December 2016 - June 2020.
+                <p>State Plan for Scientific and Technical Research and Innovation 2017-2020. Spain. </p></span>
               </div>
                  
                 
