--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
                      </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (1993), Volume 21(2), 145-157.
                 <p>With P. Braza, F. Braza and M. R. Carreras. </p></span>
               </div>
+
+</section><!--//section-->
+
     
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Projects</h2>
                 <div class="intro">
@@ -231,7 +234,9 @@
                     [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
                      </a></span> <span class="project-tagline"> <br/> December 2016 - June 2020.
                 <p>State Plan for Scientific and Technical Research and Innovation 2013-2016. Spain. </p></span>
-              </div>   
+              </div>
+                  </div><!--//item-->
+                  <div class="item">
                     [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
                      </a></span> <span class="project-tagline"> <br/> December 2016 - June 2020.
                 <p>State Plan for Scientific and Technical Research and Innovation 2013-2016. Spain. </p></span>
