--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Projects</h2>
                 <div class="intro">
-                    <p></p>
+                    <p></span>
                 </div><!--//intro-->
                 <div class="item">
                     [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
