--- a/index.html
+++ b/index.html
@@ -249,8 +249,14 @@
                     [04] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Behavioural flexibility as a mediator of the effect of family and individual factors on social acceptance in the peer group".
                      </a></span> <span class="project-tagline"> <br/> November 2002 - November 2005.
                 <p>National Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
-              </div>[03] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Evaluation of the teacher's socio-personal skills: classroom management strategies".
-                     </a></span> <span class="project-tagline"> <br/> January 2000 - December 2002.
+              </div>
+                    [03] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Evaluation of the teacher's socio-personal skills: classroom management strategies".
+                     </a></span> <span class="project-tagline"> <br/> November 2002 - November 2005.
+                <p>National Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
+              </div>
+
+[03]<span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Evaluation of the teacher's socio-personal skills: classroom management strategies".
+                     </a></span> <span class="project-tagline"> <br/> November 2002 - November 2005.
                 <p>National Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
               </div>
 
