--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"> </i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
-                    <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
-                    <!--<li class="website"><i class="fa fa-globe"></i><a href="https://marithania.github.io" target="_blank">marithania.github.io</a></li>-->
+                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
+                    <li class="website"><i class="fa fa-globe"></i><a href="https://jmmunozsanchez.github.io" target="_blank">jmmunozsanchez.github.io</a></li>-->
                     <!--<li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>-->
                 </ul>
             </div><!--//contact-container-->
@@ -87,7 +87,7 @@
                     <p style="text-align:justify">I have been working since 2004 as Associate Professor at the Department of Psychology of the University of Cádiz (UCA). I am member of the research group <a href="https://hum554.uca.es" target="_blank"> "HUM554 Intelligence, Behavior & Adaptation"</a>. 
                     <p style="text-align:justify">I obtained my PhD Degree from the University of Seville in December 2000, supervised by Francisco Braza Lloret (Doñana Biological Station EBD-CSIC).</p> 
                     <p style="text-align:justify">I received a Degree in Psychology (December 1992), from the National Distance Education University (UNED).</p>
-                    <p style="text-align:justify">I have been a visiting predoctoral researcher at the Social Ethology Department of the Doñana Biological Station (November 1993 – October 1994) under the supervision of Francisco Braza Lloret.</p> 
+                    <!--<p style="text-align:justify">I have been a visiting predoctoral researcher at the Social Ethology Department of the Doñana Biological Station (November 1993 – October 1994) under the supervision of Francisco Braza Lloret.</p> 
                     <!--<p style="text-align:justify">I have been a visiting postdoctoral researcher at the Oinarrizko Psikologia Prozesuak eta Garapena Saila at the Uiversity of the Basque Country (August 2002) under the supervision of José Ramón Sánchez Martín.</p>-->
                     <!--<p style="text-align:justify">In November 2004 I enrolled the Department of Psychology at the University of Cádiz as a Associate Professor.</p>-->
                 </div><!--//summary-->
