--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"> </i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
-                    <li class="website"><i class="fa fa-globe"></i><a href="https://jmmunozsanchez.github.io" target="_blank">jmmunozsanchez.github.io</a></li>-->
+                    <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
+                    <!--<li class="website"><i class="fa fa-globe"></i><a href="https://jmmunozsanchez.github.io" target="_blank">jmmunozsanchez.github.io</a></li>-->
                     <!--<li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>-->
                 </ul>
             </div><!--//contact-container-->
@@ -232,7 +232,7 @@
                                                                          
                 </div><!--//intro-->
                 <div class="item">
-                    [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
+                    [06] <span class="project-title">"Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
                      </a></span> <span class="project-tagline"> <br/> December 2016 - June 2020.
                 <p>State Plan for Scientific and Technical Research and Innovation 2013-2016. Spain. </p></span>              
                     [05] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Do peer relationships help mitigate behavioral problems associated with a difficult family environment?".
