--- a/index.html
+++ b/index.html
@@ -234,22 +234,22 @@
                 <div class="item">
                     [06] <span class="project-title">"Biopsychosocial model of aggressive behaviour in school-age children: Susceptibility to family context as a function of temperament and hormonal profiles".
                      </a></span> <span class="project-tagline"> <br/> December 2016 - June 2020.
-                <p>State Plan for Scientific and Technical Research and Innovation 2013-2016. Spain. </p></span>              
-                    [05] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Do peer relationships help mitigate behavioral problems associated with a difficult family environment?".
+                <p>Plan for Scientific and Technical Research and Innovation 2013-2016. Spain. </p></span>              
+                    [05] <span class="project-title">"Do peer relationships help mitigate behavioral problems associated with a difficult family environment?".
                      </a></span> <span class="project-tagline"> <br/> January 2009 - December 2011.
-                <p>National Plan for Scientific Research, Development and Technological Innovation 2008-2011. Spain. </p></span>
-                    [04] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Behavioural flexibility as a mediator of the effect of family and individual factors on social acceptance in the peer group".
+                <p>Plan for Scientific Research, Development and Technological Innovation 2008-2011. Spain. </p></span>
+                    [04] <span class="project-title">"Behavioural flexibility as a mediator of the effect of family and individual factors on social acceptance in the peer group".
                      </a></span> <span class="project-tagline"> <br/> November 2002 - November 2005.
-                <p>National Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
-                    [03]<span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Evaluation of the teacher's socio-personal skills: classroom management strategies".
+                <p>Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
+                    [03]<span class="project-title">"Evaluation of the teacher's socio-personal skills: classroom management strategies".
                      </a></span> <span class="project-tagline"> <br/> November 2002 - November 2005.
-                <p>National Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
-                   [02] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Family contribution to the child's adaptive development".
+                <p>Plan for Scientific Research, Development and Technological Innovation 2000-2003. Spain. </p></span>
+                   [02] <span class="project-title">"Family contribution to the child's adaptive development".
                      </a></span> <span class="project-tagline"> <br/> August 1995 - December 1998.
-                <p>National Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
-                   [01] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Social success and adaptability in the pre-school peer group".
+                <p>Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
+                   [01] <span class="project-title">"Social success and adaptability in the pre-school peer group".
                      </a></span> <span class="project-tagline"> <br/> June 1992 - December 1995.
-                <p>National Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
+                <p>Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
            
 
 
