--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"> </i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
                     <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
-                    <li class="website"><a href="https://www.researchgate.net/profile/Jose_Manuel_Munoz_Sanchez">JM Muñoz Researchgate</a></li>-->
+                    <li class="website"><a href="https://publons.com/researcher/1620754/jose-manuel-munoz-sanchez/">WOS ResearcherID C-1203-2011</a></li>
                     <!--<li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>-->
                 </ul>
             </div><!--//contact-container-->
