--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"> </i><a href="mailto: josemanuel.munoz@uca.es">josemanuel.munoz@uca.es</a></li>
                     <!--<li class="phone"><i class="fa fa-phone"></i><a href="tel:+34 956 016799">+34 956 016799</a></li>-->
-                    <li class="website"><a href="https://publons.com/researcher/1620754/jose-manuel-munoz-sanchez/">WOS ResearcherID C-1203-2011</a></li>
-                    <li class="website"><a href="http://orcid.org/0000-0002-4046-3865/">ORCID iD 0000-0002-4046-3865</a></li>
+                    <!--<li class="website"><a href="https://publons.com/researcher/1620754/jose-manuel-munoz-sanchez/">WOS ResearcherID C-1203-2011</a></li>
+                    <!--<li class="website"><a href="http://orcid.org/0000-0002-4046-3865/">ORCID iD 0000-0002-4046-3865</a></li>
                     <!--<li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>-->
                 </ul>
             </div><!--//contact-container-->
@@ -91,6 +91,7 @@
                     <!--<p style="text-align:justify">I have been a visiting predoctoral researcher at the Social Ethology Department of the Doñana Biological Station (November 1993 – October 1994) under the supervision of Francisco Braza Lloret.</p> 
                     <!--<p style="text-align:justify">I have been a visiting postdoctoral researcher at the Oinarrizko Psikologia Prozesuak eta Garapena Saila at the Uiversity of the Basque Country (August 2002) under the supervision of José Ramón Sánchez Martín.</p>-->
                     <!--<p style="text-align:justify">In November 2004 I enrolled the Department of Psychology at the University of Cádiz as a Associate Professor.</p>-->
+                    <li class="website"><a href="https://publons.com/researcher/1620754/jose-manuel-munoz-sanchez/">WOS ResearcherID C-1203-2011</a></li>
                 </div><!--//summary-->
             </section><!--//section-->
             
