--- a/index.html
+++ b/index.html
@@ -118,109 +118,109 @@
                     <p></p>
                 </div><!--//intro-->
                 <div class="item">
-                    [21] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggressive behavior in school-aged children: clusters based on anger, empathy and testosterone and cortisol measures". </a></span> 
+                    <!--[21] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggressive behavior in school-aged children: clusters based on anger, empathy and testosterone and cortisol measures". </a></span> 
                     <span class="project-tagline"> <br/> The Spanish Journal of Psychology (2019), Volume 22, E42. 
                     <p>With E. Pascual-Sagastizabal, J. R. Sánchez-Martín, O. Vegas, P. Braza, M. R. Carreras, N. del Puerto-Golzarri and A. Azurmendi. </p></span>
                 </div><!--//item--> 
                 <div class="item">
                     [20] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Differential Effects of Mother’s and Father’s Parenting on Prosocial and Antisocial Behavior: Child Sex Moderating". </a></span> 
-                    <span class="project-tagline"> <br/> Journal of Child and Family Studies (2017), Volume 26(8), 2182-2190.
+                    <span class="project-tagline"> <br/> Journal of Child and Family Studies 2017 - Q2, Volume 26(8), 2182-2190.
                     <p>With R. Ruiz-Ortiz, P. Braza and R. Carreras.</p></span>
                 </div><!--//item-->            
                 <div class="item">
                     [19] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Daycare Center Attendance Buffers the Effects of Maternal Authoritarian Parenting Style on Physical Aggression in Children". </a></span> 
-                    <span class="project-tagline"> <br/> Frontiers in Psycholoy (2017), Volume 8, E391. 
+                    <span class="project-tagline"> <br/> Frontiers in Psycholoy 2017 - Q2, Volume 8, E391. 
                     <p>With P. Braza, R. Carreras, F. Braza, A. Azurmendi, E. Pascual-Sagastizábal, J. Cardas and J. R. Sánchez-Martín. </p></span>
                 </div><!--//item-->
                 <div class="item">
                     [18] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Controlling relationships in preschool children". </a></span> 
-                    <span class="project-tagline"> <br/> International Journal of Behavioral Development (2016), Volume 28(5), 444-448. 
+                    <span class="project-tagline"> <br/> International Journal of Behavioral Development 2016 - Q2, Volume 28(5), 444-448. 
                     <p>With F. Braza and R. Carreras. </p></span>
                 </div><!--//item-->
                 <div class="item">
                     [17] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Developmental trajectories of aggressive behavior in children from ages 8 to 10: The role of sex and hormones". </a></span>
-                    <span class="project-tagline"> <br/> American Journal of Human Biology (2016), Volume 28(1), 488-497. 
+                    <span class="project-tagline"> <br/> American Journal of Human Biology 2016 - Q1, Volume 28(1), 488-497. 
                     <p>With A. Azurmendi, E. Pascual-Sagastizábal, A. I. Vergara, P. Braza, R. Carreras, F. Braza and J. R. Sánchez-Martín. </p></span>   
                  </div><!--//item-->
                 <div class="item">
                     [16] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Negative Maternal and Paternal Parenting Styles as Predictors of Children's Behavioral Problems: Moderating Effects of the Child's Sex". </a></span> 
-                    <span class="project-tagline"> <br/> Journal of Child and Family Studies (2015), Volume 24(4), 847-856. 
+                    <span class="project-tagline"> <br/> Journal of Child and Family Studies 2015 - Q2, Volume 24(4), 847-856. 
                     <p>With P. Braza, R. Carreras, F. Braza, A. Azurmendi, E. Pascual-Sagastizábal, J. Cardas and J. R. Sánchez-Martín. </p></span>
                 </div><!--//item-->
                    <div class="item">
                     [15] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggression and prosocial behaviors in social conflicts mediating the influence of cold social intelligence and affective empathy on children's social preference". </a></span>
-                       <span class="project-tagline"> <br/> Scandinavian Journal of Psychology (2014), Volume 55(4), 371-379. 
+                       <span class="project-tagline"> <br/> Scandinavian Journal of Psychology 2014 - Q2, Volume 55(4), 371-379. 
                     <p>With M. R. Carreras, P. Braza, F. Braza, A. Azurmendi, E. Pascual-Sagastizábal, J. Cardas and J. R. Sánchez-Martín. </p></span>   
                  </div><!--//item-->
                    <div class="item">
                     [14] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Empathy, estradiol and androgen levels in 9-year-old children".
-                       </a></span> <span class="project-tagline"> <br/> Personality and Individual Differences (2013), Volume 54(8), 936-940.
+                       </a></span> <span class="project-tagline"> <br/> Personality and Individual Differences 2013 - Q2, Volume 54(8), 936-940.
                        </span>   
                     <p>With E. Pascual-Sagastizábal, A. Azurmendi, J. R. Sánchez-Martín, F. Braza, M. R. Carreras and P. Braza. </p></span>
                 </div><!--//item-->
                     <div class="item">
                     [13] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Girls' and Boys' Choices of Peer Behavioral Characteristics at Age Five". </a></span>
-                        <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (2012), Volume 40(10, 1749-1759.
+                        <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal 2012 - Q4, Volume 40(10, 1749-1759.
                     <p>With F. Braza, J. R. Sánchez-Martín, P. Braza, R. Carreras, A. Azurmendi and I. Verdier. </p></span>   
                 </div><!--//item-->
                     <div class="item">
                     [12] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Androgen levels and anger and impulsivity measures as predictors of physical, verbal and indirect aggression in boys and girls".
-                        </a></span> <span class="project-tagline"> <br/> Psychoneuroendocrinology (2011), Volume 36(5), 750-760. </span>   
+                        </a></span> <span class="project-tagline"> <br/> Psychoneuroendocrinology 2011 - Q1, Volume 36(5), 750-760. </span>   
                     <p>With J. R. Sánchez-Martín, A. Azurmendi, E. Pascual-Sagastizábal, J. Cardas, F. Braza, P. Braza and M. R. Carreras. </p></span>
                 </div><!--//item-->
                     <div class="item">
                     [11] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Social cognitive predictors of peer acceptance at age 5 and the moderating effects of gender".
-                         </a></span> <span class="project-tagline"> <br/> British Journal of Developmental Psychology (2010), Volume 27(3), 703-716.
+                         </a></span> <span class="project-tagline"> <br/> British Journal of Developmental Psychology 2010 - Q3, Volume 27(3), 703-716.
                          <p>With F. Braza, A. Azurmendi, M. R. Carreras, P. Braza, A. García, A. Sorozábal and J. R. Sánchez-Martín.</p></span>
                 </div><!--//item-->
                 <div class="item">
                     [10] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Androgen levels, parenting styles and aggressive behavior in 5-6-year-old boys and girls".
-                         </a></span> <span class="project-tagline"> <br/> Psicothema (2009), Volume 21(1), 57-62.
+                         </a></span> <span class="project-tagline"> <br/> Psicothema 2009 - Q3, Volume 21(1), 57-62.
                          <p>With J. R. Sánchez-Martín, A. Azurmendi, E. Fano, F. Braza, and M. R. Carreras. </p></span>
                   </div><!--//item-->
                   <div class="item">
                     [09] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Behavioral profiles of different types os social status in preschool children: an observational approach".
-                     </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (2007), Volume 35(2), 195-212.
+                     </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal 2007 - Q4, Volume 35(2), 195-212.
                     <p>With F. Braza, P. Braza, M. R. Carreras, J. R. Sánchez-Martín, A. Azurmendi, A. Sorozábal, A. García and J. Cardas. </p></span>
                     </div><!--//item-->
                   <div class="item">
                     [08] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Aggression, dominance, and affiliation: Their relationships with androgen levels and intelligence in 5-year-old children".
-                     </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2006), Volume 50(1), 132-140.
+                     </a></span> <span class="project-tagline"> <br/> Hormones and Behavior 2006 - N/D, Volume 50(1), 132-140.
                 <p>With A. Azurmendi, F. Braza, A. García, P. Braza and J. R. Sánchez-Martín. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [07] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Cognitive abilities, androgen levels, and body mass index in 5-year-old children".
-                     </a></span> <span class="project-tagline"> <br/> Hormones and Behavior (2005), Volume 48(2), 187-195.
+                     </a></span> <span class="project-tagline"> <br/> Hormones and Behavior 2005 - N/D, Volume 48(2), 187-195.
                 <p>With A. Azurmendi, F. Braza, A. Sorozábal, A. García, P. Braza, M. R. Carreras, J. Cardas and J. R. Sánchez-Martín. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [06] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"An approach to the study of attitudes and strategies of social thought and their connection with disruptive behavior in the secondary school classroom".
-                     </a></span> <span class="project-tagline"> <br/> Anales de Psicología (2004), Volume 20(1), 81-91.
+                     </a></span> <span class="project-tagline"> <br/> Anales de Psicología 2004 - N/D, Volume 20(1), 81-91.
                 <p>With M. R. Carreras and P. Braza. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [05] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Effects of siblings on preschool children's behavioral flexibility".
-                     </a></span> <span class="project-tagline"> <br/> Revista Mexicana de Psicología (2000), Volume 17, 181-190.
+                     </a></span> <span class="project-tagline"> <br/> Revista Mexicana de Psicología 2000 - N/D, Volume 17, 181-190.
                 <p>With F. Braza, M. R. Carreras, C. San José and P. Braza. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [04] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Development of sex differences in preschool children: Social behavior during an academic year".
-                     </a></span> <span class="project-tagline"> <br/> Psychological Reports (1997), Volume 80(1), 179-188.
+                     </a></span> <span class="project-tagline"> <br/> Psychological Reports 1997 - N/D, Volume 80(1), 179-188.
                 <p>With F. Braza, P. Braza, and M. R. Carreras. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [03] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"The index of amplitude of behavior as a measuring instrument of social ability in preschool children".
-                     </a></span> <span class="project-tagline"> <br/> Psicothema (1997), Volume 9(2), 305-310.
+                     </a></span> <span class="project-tagline"> <br/> Psicothema 1997 - N/D, Volume 9(2), 305-310.
                 <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [02] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Factors affecting the social ability in pre-school children: An exploratory study".
-                     </a></span> <span class="project-tagline"> <br/> Behavioural Processes (1994), Volume 32, 209-226.
+                     </a></span> <span class="project-tagline"> <br/> Behavioural Processes 1994 - N/D, Volume 32, 209-226.
                 <p>With F. Braza, P. Braza and M. R. Carreras. </p></span>
                  </div><!--//item-->
                   <div class="item">
                     [01] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Measuring the social ability of preschool children".
-                     </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal (1993), Volume 21(2), 145-157.
+                     </a></span> <span class="project-tagline"> <br/> Social Behavior and Personality: An International Journal 1993 - N/D, Volume 21(2), 145-157.
                 <p>With P. Braza, F. Braza and M. R. Carreras. </p></span>
               </div>
 
