--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </section><!--//section-->
             
             <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-pencil"></i>Publications</h2>
+                <h2 class="section-title"><i class="fa fa-pencil"></i>Publications (WoS)</h2>
                 <div class="intro">
                     <p></p>
                 </div><!--//intro-->
