--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>About me</h2>
                 <div class="summary">
-                    <p style="text-align:justify">I have been working since 2004 as Associate Professor at the Department of Psychology of the University of Cádiz (UCA). I am member of the research group <a href="https://hum554.uca.es" target="_blank"> "HUM554 Intelligence, Behavior & Adaptation"</a>. 
+                    <p style="text-align:justify">I have been working since November 2004 as Associate Professor at the Department of Psychology of the University of Cádiz (UCA). I am member of the research group <a href="https://hum554.uca.es" target="_blank"> "HUM554 Intelligence, Behavior & Adaptation"</a>. 
                     <p style="text-align:justify">I obtained my PhD Degree from the University of Seville in December 2000, supervised by Francisco Braza Lloret (Doñana Biological Station EBD-CSIC).</p> 
                     <p style="text-align:justify">I received a Degree in Psychology (December 1992), from the National Distance Education University (UNED).</p>
                     <!--<p style="text-align:justify">I have been a visiting predoctoral researcher at the Social Ethology Department of the Doñana Biological Station (November 1993 – October 1994) under the supervision of Francisco Braza Lloret.</p> 
