--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
                 <p>Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
            
 
+</section><!--//section-->
+
 <h2 class="section-title"><i class="fa fa-rocket"></i>Projects2</h2>
                 <div class="intro">
                     <p></span>
