--- a/index.html
+++ b/index.html
@@ -279,17 +279,11 @@
                    [01] <span class="project-title">"Social success and adaptability in the pre-school peer group".
                      </a></span> <span class="project-tagline"> <br/> June 1992 - December 1995.
                 <p>Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
-
-     </section><!--//section-->      
+                </div>
             
         </div><!--//main-body-->
     </div>
  
-
-
-
-
-
 
 
     <footer class="footer">
