--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                      </a></span> <span class="project-tagline"> <br/> June 1992 - December 1995.
                 <p>Plan for Scientific Research, Development and Technological Innovation 1992-1995. Spain. </p></span>
 
+</section><!--//section-->
 
 
         </div><!--//main-body-->
