--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p>With E. Pascual-Sagastizabal, J. R. Sánchez-Martín, O. Vegas, P. Braza, M. R. Carreras, N. del Puerto-Golzarri and A. Azurmendi. </p></span>
                 </div><!--//item--> 
                 <div class="item">
-                    [20] <span class="project-title"><a href="https://rodin.uca.es/xmlui/"target="_blank">"Differential Effects of Mother’s and Father’s Parenting on Prosocial and Antisocial Behavior: Child Sex Moderating". </a></span> 
+                    [20] <span class="project-title"><a href="https://rodin.uca.es/xmlui/bitstream/handle/10498/21984/12019.pdf?sequence=1&isAllowed=y"target="_blank">"Differential Effects of Mother’s and Father’s Parenting on Prosocial and Antisocial Behavior: Child Sex Moderating". </a></span> 
                     <span class="project-tagline"> <br/> Journal of Child and Family Studies 2017 - Q2, Volume 26(8), 2182-2190.
                     <p>With R. Ruiz-Ortiz, P. Braza and R. Carreras.</p></span>
                 </div><!--//item-->            
